# rag_engine_backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt  worker.py
app/application/use_cases/: answer_query.py  ingest_pdf.py
app/core/: dependencies.py  settings.py
app/domain/: entities.py  interfaces.py
app/infrastructure/jobs/: ingest_pdf_job.py
app/infrastructure/queue/: rq.py
app/infrastructure/services/: chunker.py  llm_service.py  openai_embedder.py  pdf_parser.py  vectore_store.py
app/infrastructure/web/: api_models.py  main.py  routes.py
tests/: fakes.py  test_answer_query.py  test_ingest_pdf.py  test_pdf_parser.py  test_routes.py  test_settings.py  test_vector_store.py  test_worker.py
